AO3-5626 Fix overlapping text when download has child related works (#4649)

--- a/public/stylesheets/ebooks.css
+++ b/public/stylesheets/ebooks.css
@@ -20,6 +20,11 @@
   margin-bottom: 0;
 }
 
+/* list child related works under the labeling dt */
+#afterword .meta dd {
+  margin: 1em 0 0 1em;
+}
+
 #chapters, .userstuff {
   font-family: serif;
   padding: 0;
